Primeira entrega (parte 2)

--- a/product-service/src/main/resources/templates/home.html
+++ b/product-service/src/main/resources/templates/home.html
@@ -95,11 +95,12 @@
 <body>
     <div class="container">
         <header>
-            <h1>Deliver</h1>
+            <h1>UNbelievable</h1>
             <nav>
                 <ul>
                     <li><a href="http://localhost:8080/home">Página inicial</a></li>
                     <li><a href="http://localhost:8080/products">Produtos</a></li>
+                    <li><a href="http://localhost:8080/addProduct">Adicionar novo Produto</a></li>
                     <li><a href="http://localhost:8081/login">Login</a></li>
                     <li><a href="http://localhost:8081/register">Registrar</a></li>
                 </ul>
@@ -107,7 +108,16 @@
         </header>
         <section class="home-section">
             <h2>Bem-vindo ao Nosso Aplicativo de Entrega!</h2>
-            <p>Descubra nossa incrível variedade de produtos que atenderão todas as suas necessidades. De comida deliciosa a pratos requintados, temos tudo!</p>
+            <p>Bem-vindo à UNbelievable - sua loja dos sonhos, onde a imaginação ganha vida! Aqui, você encontrará uma vasta seleção de produtos totalmente imaginários que desafiam os limites da realidade. Nossa loja é um universo paralelo, onde a criatividade corre solta e os produtos existem apenas na sua imaginação.</p>
+            <p>Ao entrar na UNbelievable, você será imerso em um mundo mágico e encantador. As prateleiras estão repletas de itens surpreendentes que desafiam a lógica e transportam você para lugares desconhecidos. Nossos funcionários são especialistas em tornar o impossível possível e estão sempre prontos para ajudar você a encontrar exatamente o que precisa para alimentar sua imaginação.</p>
+            <p>Explore nossas seções temáticas, cada uma oferecendo uma experiência única:</p>
+            <p>Criaturas Fantásticas: Aqui, você encontrará animais míticos e seres lendários. Desde dragões de estimação até fadas em miniatura que realizam desejos, nossa coleção de criaturas fantásticas vai despertar a sua imaginação e tornar seus contos de fadas realidade.</p>
+            <p>Tecnologia Além da Realidade: Nesta seção, oferecemos dispositivos imaginários de última geração. Você pode encontrar óculos que permitem ver o invisível, aparelhos de teletransporte para viajar instantaneamente para qualquer lugar do universo e até mesmo um relógio que para o tempo. Tudo isso e muito mais!</p>
+            <p>Artefatos Místicos: Aqui, os artefatos antigos ganham vida. Amuletos que concedem poderes mágicos, espelhos que revelam seu verdadeiro eu e artefatos misteriosos com propriedades extraordinárias. Se você está em busca de algo verdadeiramente único e enigmático, esta é a seção certa para você.</p>
+            <p>Plantas Imaginárias: Jardins mágicos e florestas encantadas são a essência desta seção. Nossas plantas imaginárias são capazes de brilhar no escuro, mudar de cor conforme o seu humor e até mesmo tocar músicas enquanto crescem. Deixe sua imaginação florescer com a beleza botânica da UNbelievable.</p>
+            <p>Poções e Elixires: Prepare-se para uma experiência alquímica nesta seção. Aqui, oferecemos poções e elixires que prometem conceder habilidades extraordinárias. Desde poções de invisibilidade até elixires de amor eterno, esta é a seção perfeita para os buscadores de aventura e magia.</p>
+            <p>Lembre-se de que todos os produtos da UNbelievable são completamente imaginários e não têm existência real fora da nossa loja. No entanto, eles têm o poder de estimular a sua criatividade, desencadear histórias maravilhosas e tornar seus sonhos mais vívidos.</p>
+            <p>Então, prepare-se para embarcar em uma jornada inesquecível na UNbelievable, onde a imaginação é o único limite e o impossível se torna possível!</p>
         </section>
         <section class="branch-section">
             <h2>Visite Nossa Filial</h2>
