--- a/user-service/src/main/resources/templates/register.html
+++ b/user-service/src/main/resources/templates/register.html
@@ -96,11 +96,12 @@
 <body>
     <div class="container">
         <header>
-            <h1>Deliver</h1>
+            <h1>UNbelievable</h1>
             <nav>
                 <ul>
                     <li><a href="http://localhost:8080/home">Página inicial</a></li>
                     <li><a href="http://localhost:8080/products">Produtos</a></li>
+                    <li><a href="http://localhost:8080/addProduct">Adicionar novo Produto</a></li>
                     <li><a href="http://localhost:8081/login">Login</a></li>
                     <li><a href="http://localhost:8081/register">Registrar</a></li>
                 </ul>
