Adicionando Dev tools

--- a/product-service/src/main/resources/templates/home.html
+++ b/product-service/src/main/resources/templates/home.html
@@ -107,7 +107,7 @@
             </nav>
         </header>
         <section class="home-section">
-            <h2>Bem-vindo ao Nosso Aplicativo de Entrega!</h2>
+            <h2>Bem-vindo ao Nosso Aplicativo de produtos!!!!</h2>
             <p>Bem-vindo à UNbelievable - sua loja dos sonhos, onde a imaginação ganha vida! Aqui, você encontrará uma vasta seleção de produtos totalmente imaginários que desafiam os limites da realidade. Nossa loja é um universo paralelo, onde a criatividade corre solta e os produtos existem apenas na sua imaginação.</p>
             <p>Ao entrar na UNbelievable, você será imerso em um mundo mágico e encantador. As prateleiras estão repletas de itens surpreendentes que desafiam a lógica e transportam você para lugares desconhecidos. Nossos funcionários são especialistas em tornar o impossível possível e estão sempre prontos para ajudar você a encontrar exatamente o que precisa para alimentar sua imaginação.</p>
             <p>Explore nossas seções temáticas, cada uma oferecendo uma experiência única:</p>
