--- a/product-service/src/main/resources/templates/addProduct.html
+++ b/product-service/src/main/resources/templates/addProduct.html
@@ -145,7 +145,7 @@
         <label for="name">Nome do produto</label><br>
         <input type="text" id="name" name="name"><br>
         <label for="description">Descrição:</label><br>
-        <input type="text" id="description" name="description"><br>
+        <input type="text" required id="description" name="description"><br>
         <label for="price">Preço:</label><br>
         <input type="number" id="price" name="price" min="0"><br>
         <input type="submit" value="Submit">
